# delayed_reactant_labeling

./: .gitignore  .readthedocs.yaml  README.rst  README.txt  experimental_data_Roelant.xlsx  predicted_DRL_ORIGINAL_post_addition.xlsx  predicted_DRL_ORIGINAL_pre_addition.xlsx  pyproject.toml  setup.py
docs/: requirements.txt
docs/source/: conf.py  design_choices.rst  extensive_example.rst  index.rst  installation.rst  optimize.rst  predict.html  predict.rst  visualize.rst
drlpy/: optimize_rate_constants.py
example_server/: procedure.py
examples/: example_model_boundaries.ipynb  example_optimize.py  example_optimize_simple.ipynb  example_predict.py
examples/cluster/: readme
examples/docs/: example_extensive.ipynb  example_model_boundaries.ipynb  example_optimize.ipynb  example_optimize.py  example_predict.ipynb  extensive_example_debug.py
examples/model_boundaries/: nFtF.py  nFtT.py  nTtF.py  nTtT.py  procedure.py  procedure_model_boundary.py
examples/model_boundaries_Hilgers/: model_bounds_Hilgers.py  n0_all.py  n0_no_2.py  n0_no_2_6.py  n0_no_4_5.py  n0_no_6.py  n0_no_cat.py  n0_no_cat_2_4_5.py  n0_no_cat_2_4_5_6.py  n0_no_cat_2_6.py
examples/model_boundaries_roelant/: model_bounds_roelant.py  n0_all.py  n0_no_2.py  n0_no_2_6.py  n0_no_4_5.py  n0_no_6.py  n0_no_cat.py  n0_no_cat_2_4_5.py  n0_no_cat_2_4_5_6.py  n0_no_cat_2_6.py
examples/report/: curve.py
src/delayed_reactant_labeling/: delayed_reactant_labeling.py  optimize.py  optimize_nelder_mead.py  predict.py  (+4 more)
tests/: .numba_config.yaml  test_optimize.py  test_predict.py  test_visualize.py
(+109 files in other folders)
